<resources>
    <string name="app_name">MovieLibrery</string>
    <string name="menuItem">CLEAR ALL</string>
    <string name="ExitmenuItem">EXIT</string>
    <string name="EditItem">EDIT MOVIE</string>
    <string name="DelItem">DELETE MOVIE</string>
    <string name="AddBtn">+</string>
    <string name="SubjectTV">SUBJECT :</string>
    <string name="MovieNameET">MOVIE NAME HERE</string>
    <string name="BodyTv">BODY :</string>
    <string name="BodyET">BODY TEXT</string>
    <string name="UrlTV">URL :</string>
    <string name="UrlET">TYPE IMAGE URL HERE</string>
    <string name="OkBtn">OK</string>
    <string name="CancelBtn">CANCEL</string>
    <string name="ShowBtn">SHOW</string>
    <string name="SearBtn">GO</string>
    <string name="SearTV">SERCH</string>
    <string name="MovieItemTV">MOVIE NAME</string>
    <string name="ManualAdd">NEW MANUAL MOVIE</string>
    <string name="InternetAddItem">NEW MOVIE FROM WEB</string>
    <string name="Deletemovie">THIS WILL DELETE THE MOVIE !!!!</string>
    <string name="SearchET">TYPE HERE MOVIE NAME</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="CheckBox">WATCHED</string>
    <string name="DelMarkesItem">DELETE WATCHED</string>
    <string name="RatingTV">0.0</string>
    <string name="RatingET">ADD RATING</string>
    <string name="SHAREITEM">SHARE</string>
    <string name="ChooseFromGallery">CHOOSE FROM GALLERY</string>
    <string name="cameramenu">CHOSE CAMERA</string>
    <string name="cameramenudown">DOWNLOAD  IMAGE</string>
</resources>
